Another overlapping fix attempt

--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@
   left: 0;
   right: 0;
   text-align: center;
-  height: 32px;
-  overflow:auto;
+  padding-top: 16px;
 }
 
 #quote_source {
